desktop spacing fixed

--- a/eksamen/css/omos.css
+++ b/eksamen/css/omos.css
@@ -802,7 +802,6 @@ padding: 0.3em;
     padding-bottom: 1em;
 }
     
-    
 
 
     h4 {
@@ -1043,6 +1042,8 @@ padding: 0.3em;
     }
 
     /* Dyre poter styling - ipad -  slut*/
+    
+    
 
 
     
@@ -1117,7 +1118,9 @@ display: none;
     }
     
         
-        
+        /* 
+navstyle slut
+*/
         
         
 
@@ -1141,6 +1144,14 @@ display: none;
             font-size: 0.8em;
 
         }
+        
+               h1{
+    margin-top: 10%;
+   
+}
+        
+ 
+        
 
         /* tape styling - desktop */
 
